set(BOOSTSYSTEM_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(BOOSTSYSTEM_LIBRARIES boostsystem)

add_library(${BOOSTSYSTEM_LIBRARIES}
    src/error_code.cpp)

target_include_directories(${BOOSTSYSTEM_LIBRARIES} PRIVATE
    ${BOOSTSYSTEM_INCLUDE_DIRS})

set(BOOSTSYSTEM_FOUND TRUE PARENT_SCOPE)
set(BOOSTSYSTEM_INCLUDE_DIRS ${BOOSTSYSTEM_INCLUDE_DIRS} PARENT_SCOPE)
set(BOOSTSYSTEM_LIBRARIES ${BOOSTSYSTEM_LIBRARIES} PARENT_SCOPE)
