set(BOOSTSYSTEM_LIBRARIES boostsystem)

add_library(${BOOSTSYSTEM_LIBRARIES} STATIC
    src/error_code.cpp)

target_include_directories(${BOOSTSYSTEM_LIBRARIES} PRIVATE
    ${BOOST_INCLUDE_DIRS})

set(BOOSTSYSTEM_FOUND TRUE PARENT_SCOPE)
set(BOOSTSYSTEM_INCLUDE_DIRS ${BOOST_INCLUDE_DIRS} PARENT_SCOPE)
set(BOOSTSYSTEM_LIBRARIES ${BOOSTSYSTEM_LIBRARIES} PARENT_SCOPE)
